V3 - Dynamically add tasks to the list

--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
@@ -1,4 +1,4 @@
 <div class="task-list">
-    <app-add-task></app-add-task>
-    <app-tasks></app-tasks>
+    <app-add-task (task) = "addTaskToList($event)"></app-add-task>
+    <app-tasks [taskList] = "tasks"></app-tasks>
 </div>
