--- a/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
@@ -1,5 +1,3 @@
 <ul>
-    <app-task></app-task>
-    <app-task></app-task>
-    <app-task></app-task>
+    <app-task *ngFor="let task of taskList">{{task}}</app-task>
 </ul>
