--- a/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.html
@@ -1,7 +1,7 @@
 <li>
     <div class="task-container">
       <input type="checkbox">
-      <span>Task N</span>
+      <span><ng-content></ng-content></span>
       <app-task-btn></app-task-btn>
     </div>
 </li>
