--- a/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
@@ -4,7 +4,7 @@
         [task] = "task"
         (deletedTask) = "deleteTask(i)"
         (checkedTask) = "toggleCheckedTask(i,$event)">
-       {{task.title}} isDone:{{task.isChecked}}
+       {{task.title}}
         </app-task>
     </li>
 </ul>
