V4 - Added buttons and cleared out all the styles

--- a/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.html
@@ -1,4 +1,4 @@
 <article class="add-task">
     <input #newTask type="text" placeholder="Describa una tarea">
-    <app-btn-text (click)="emitTask(newTask.value)">ADD</app-btn-text>
+    <app-btn-icon [type]="check" (click)="emitTask(newTask.value)"></app-btn-icon>
 </article>
