V4 - Added modularized shared-style

--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.css
@@ -1,1 +1,3 @@
-/*# sourceMappingURL=core-content.component.css.map */
+hr {
+  border: 2px solid;
+}/*# sourceMappingURL=core-content.component.css.map */
