--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
@@ -1,4 +1,4 @@
-<section class="wrapper">
+<main>
     <section>
         <app-add-task (task)="addTaskToList($event)">
         </app-add-task>
@@ -8,4 +8,4 @@
         <app-tasks [taskList]="tasks">
         </app-tasks>
     </section>
-</section>
+</main>
