--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
@@ -1,2 +1,5 @@
-<h1>LISTA DE TAREAS DE NINA</h1>
-<app-btn-icon [type]="fullScreen"></app-btn-icon>
+<header>
+    <h1>LISTA DE TAREAS DE NINA</h1>
+    <app-btn-icon [type]="fullScreen"></app-btn-icon>
+</header>
+
