--- a/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.html
@@ -1,5 +1,5 @@
 <article class="task-container">
-  <input type="checkbox" (click)="emitChangeOnCheckTask()">
+  <input class="checkbox" type="checkbox" (click)="emitChangeOnCheckTask()">
   <span>
     <ng-content></ng-content>
   </span>
