--- a/LAMANSYS/FE/todo-list/src/app/shared/btn-icon-text/btn-icon-text.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/shared/btn-icon-text/btn-icon-text.component.html
@@ -1,1 +1,6 @@
-<p>btn-icon-text works!</p>
+<section>
+    <app-btn-icon class="icon">
+        <app-btn-text>
+        </app-btn-text>
+    </app-btn-icon>
+</section>
