--- a/LAMANSYS/FE/todo-list/src/assets/styles/_base.scss
+++ b/LAMANSYS/FE/todo-list/src/assets/styles/_base.scss
@@ -1,6 +1,11 @@
 :root {
     font-size: 8px;
-    border: 1px;
+}
+
+* {
+    border: 1px color;
     box-sizing: border-box;
     border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 3rem; 
 }
