--- a/LAMANSYS/FE/todo-list/src/app/app.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/app.component.html
@@ -1,8 +1,2 @@
-<header>
-    <app-core-header>
-    </app-core-header>
-</header>
-<main>
-    <app-core-content>
-    </app-core-content>
-</main>
+<app-core-header></app-core-header>
+<app-core-content></app-core-content>
