--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=core-header.component.css.map */
+header {
+  width: 33%;
+  display: flex;
+  align-items: center;
+}
+
+h1 {
+  font-size: 4.5rem;
+  flex-grow: 1;
+}/*# sourceMappingURL=core-header.component.css.map */
