--- a/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.css
@@ -1,1 +1,14 @@
-/*# sourceMappingURL=add-task.component.css.map */
+input {
+  border: none;
+  background-color: transparent;
+}
+
+.add-task {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+}
+.add-task input {
+  flex-grow: 1;
+  margin-right: 1rem;
+}/*# sourceMappingURL=add-task.component.css.map */
