--- a/LAMANSYS/FE/todo-list/src/app/shared/btn-text/btn-text.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/shared/btn-text/btn-text.component.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=btn-text.component.css.map */
+button {
+  background-color: transparent;
+  height: 6rem;
+  padding: 1rem 2rem;
+  border-color: black;
+}
+
+button {
+  display: inline-block;
+  padding: 1rem 2rem;
+}/*# sourceMappingURL=btn-text.component.css.map */
