V4 - Added some styles

--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
@@ -1,10 +1,10 @@
 <main>
-    <section>
+    <section class="add-task">
         <app-add-task (task)="addTaskToList($event)">
         </app-add-task>
     </section>
     <hr>
-    <section>
+    <section class="list-of-tasks">
         <app-tasks [taskList]="tasks">
         </app-tasks>
     </section>
