--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
@@ -1,5 +1,5 @@
 <header>
     <h1>LISTA DE TAREAS DE NINA</h1>
-    <app-btn-icon [type]="fullScreen"></app-btn-icon>
+    <app-btn-icon class="button" [type]="fullScreen"></app-btn-icon>
 </header>
 
