--- a/LAMANSYS/FE/todo-list/src/app/app.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/app.component.css
@@ -1,1 +1,8 @@
-/*# sourceMappingURL=app.component.css.map */
+.wrapper {
+  background-color: lightcyan;
+  padding: 0% 30%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow-y: auto;
+}/*# sourceMappingURL=app.component.css.map */
