--- a/LAMANSYS/FE/todo-list/src/app/app.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-core-header></app-core-header>
-<app-core-content></app-core-content>
+<div class="wrapper">
+    <app-core-header></app-core-header>
+    <app-core-content></app-core-content>
+</div>
