--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.css
@@ -1,3 +1,13 @@
+.list-of-tasks {
+  max-width: 64rem;
+}
+
+.add-tasks {
+  max-width: 64rem;
+}
+
 hr {
   border: 2px solid;
+  margin-bottom: 1rem;
+  max-width: 64rem;
 }/*# sourceMappingURL=core-content.component.css.map */
