--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
@@ -1,10 +1,19 @@
 header{
-    width: 33%;
     display: flex;
     align-items: center;
+    margin: 1rem;    
+    max-width: 64rem;
+    h1{
+        font-size: 4.5rem;
+        flex-grow: 1;
+        margin: 1rem;
+    }
+    .button{
+        margin: 1rem 1rem 0 1rem;
+    }
 }
 
-h1{
-    font-size: 4.5rem;
-    flex-grow: 1;
-}
+
+
+
+
