--- a/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.css
@@ -3,12 +3,20 @@ input {
   background-color: transparent;
 }
 
-.add-task {
+article {
+  background-color: lightpink;
   display: flex;
   align-items: center;
-  padding: 1rem;
+  -webkit-backdrop-filter: blur(5.5rem);
+          backdrop-filter: blur(5.5rem);
+  max-width: 64rem;
+  margin-bottom: 1rem;
 }
-.add-task input {
+article input {
+  border-style: dashed;
   flex-grow: 1;
-  margin-right: 1rem;
+  margin: 1rem;
+}
+article .btn {
+  margin: 1rem 1rem 1rem 0;
 }/*# sourceMappingURL=add-task.component.css.map */
