--- a/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.css
@@ -4,14 +4,15 @@ input {
 }
 
 .task-container {
+  background-color: lightgray;
   display: flex;
   align-items: center;
-  padding: 1rem;
 }
 .task-container input {
   width: 3rem;
   height: 3rem;
   border: 2px solid;
+  margin-left: 1rem;
   margin-right: 1rem;
 }
 .task-container input:checked + span {
@@ -23,4 +24,7 @@ input {
 .task-container .buttons {
   display: flex;
   align-items: center;
+}
+.task-container .buttons .btn {
+  margin: 0.5rem;
 }/*# sourceMappingURL=task.component.css.map */
