--- a/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.scss
@@ -1,13 +1,14 @@
 @import "../../../assets/styles/_input";
 
 .task-container{
+    background-color: lightgray;
     display: flex;
     align-items: center;
-    padding: 1rem;
     input{
         width: 3rem;
         height: 3rem;
         border: 2px solid;
+        margin-left: 1rem;
         margin-right: 1rem;
         &:checked + span{
             text-decoration: line-through;
@@ -19,5 +20,8 @@
     .buttons{
         display: flex;
         align-items: center;
+        .btn{
+            margin: 0.5rem;
+        }
     }
 }
