--- a/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.css
@@ -1,3 +1,12 @@
 li {
-  list-style-type: none;
+  list-style: none;
+  margin-bottom: 1rem;
+}
+
+ul {
+  -webkit-padding-start: 0%;
+          padding-inline-start: 0%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }/*# sourceMappingURL=tasks.component.css.map */
