--- a/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.html
@@ -1,4 +1,13 @@
 <ul>
+    <li>
+        <app-task>MOCKUP Task N</app-task>
+    </li>
+    <li>
+        <app-task>MOCKUP Task N</app-task>
+    </li>
+    <li>
+        <app-task>MOCKUP Task N</app-task>
+    </li>
     <li *ngFor="let task of taskList; let i = index ">
         <app-task 
         [task] = "task"
