--- a/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/feature/tasks/tasks.component.scss
@@ -1,5 +1,11 @@
 li{
-    list-style-type: none;
+    list-style: none;
+    margin-bottom: 1rem;
+}
 
-
+ul{
+    padding-inline-start: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
