--- a/LAMANSYS/FE/todo-list/src/app/shared/btn-text/btn-text.component.css
+++ b/LAMANSYS/FE/todo-list/src/app/shared/btn-text/btn-text.component.css
@@ -2,7 +2,7 @@ button {
   background-color: transparent;
   height: 6rem;
   padding: 1rem 2rem;
-  border-color: black;
+  cursor: pointer;
 }
 
 button {
