--- a/LAMANSYS/FE/todo-list/src/assets/styles/_base.scss
+++ b/LAMANSYS/FE/todo-list/src/assets/styles/_base.scss
@@ -1,3 +1,5 @@
+//@import "./_light-theme";
+
 :root {
     font-size: 8px;
 }
@@ -8,4 +10,8 @@
     border-radius: 4px;
     font-family: 'Roboto', sans-serif;
     font-size: 3rem; 
+    margin:0%;
+    // color: $base-color;
+    // background-color: $bg-color;
 }
+
