--- a/LAMANSYS/FE/todo-list/src/assets/styles/_buttons.scss
+++ b/LAMANSYS/FE/todo-list/src/assets/styles/_buttons.scss
@@ -1,6 +1,10 @@
+//@import "./_light-theme";
 button{
+    //border-color: $base-color;
     background-color: transparent;
     height: 6rem;
     padding: 1rem 2rem;
-    border-color: black;
+
+    cursor: pointer;
+
 }
