--- a/LAMANSYS/FE/todo-list/src/assets/styles/_colors.scss
+++ b/LAMANSYS/FE/todo-list/src/assets/styles/_colors.scss
@@ -2,5 +2,7 @@ $Negro : rgba(34,34,34,1);
 $Negro50 : rgba(34,34,34,0.5);
 $Negro10 : rgba(34,34,34,0.1);
 $Blanco:rgba(255,255,255,1);
-$Blancon50:rgba(255,255,255,0.5);
+$Blanco50:rgba(255,255,255,0.5);
 $Blanco20: rgba(255,255,255,0.2);
+
+
