--- a/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task/task.component.scss
@@ -1,7 +1,6 @@
-@import "../../../assets/styles/_input";
+@import "../../../styles/base.scss";
 
 .task-container{
-    background-color: lightgray;
     display: flex;
     align-items: center;
     input{
