--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
@@ -5,6 +5,7 @@ header{
     max-width: 64rem;
     h1{
         font-size: 4.5rem;
+        font-weight: unset;
         flex-grow: 1;
         margin: 1rem;
     }
