--- a/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/feature/add-task/add-task.component.scss
@@ -1,17 +1,15 @@
-@import "../../../assets/styles/_input";
+@import "../../../styles/base.scss";
 
-article{
-    background-color: lightpink;
+form{
     display: flex;
     align-items: center;
     backdrop-filter: blur(5.5rem);
     max-width: 64rem;
     margin-bottom: 1rem;
     input{
-        border-style: dashed;
         flex-grow: 1;
         margin: 1rem;
-        
+        outline: none;
     }
     .btn{
         margin: 1rem 1rem 1rem 0;
