--- a/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-content/core-content.component.html
@@ -5,7 +5,7 @@
     </section>
     <hr>
     <section class="list-of-tasks">
-        <app-tasks [taskList]="tasks">
-        </app-tasks>
+        <app-task-list [taskList]="tasks">
+        </app-task-list>
     </section>
 </main>
