--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.scss
@@ -1,16 +1,14 @@
+@import '../../../styles/_mixins.scss';
 header{
-    display: flex;
-    align-items: center;
-    margin: 1rem;    
-    max-width: 64rem;
+    @include flex(center,unset,row);
+    padding: 0.5rem;
+    flex-basis: 100%;
+    gap: 1rem;
     h1{
-        font-size: 4.5rem;
+        font-size: unset;
+        flex-basis: 100%;
+        margin-left: 0 auto;
         font-weight: unset;
-        flex-grow: 1;
-        margin: 1rem;
-    }
-    .button{
-        margin: 1rem 1rem 0 1rem;
     }
 }
 
