--- a/LAMANSYS/FE/todo-list/src/styles/base.css
+++ b/LAMANSYS/FE/todo-list/src/styles/base.css
@@ -79,12 +79,4 @@ button {
 hr {
   width: 100%;
   height: 2px;
-}
-
-.wrapper {
-  margin: 0 auto;
-  height: 100vh;
-  max-width: 32rem;
-  padding: 0 1.5rem;
-  box-sizing: unset;
-}/*# sourceMappingURL=app.component.css.map */
+}/*# sourceMappingURL=base.css.map */
