--- a/LAMANSYS/FE/todo-list/src/styles/base.scss
+++ b/LAMANSYS/FE/todo-list/src/styles/base.scss
@@ -1,22 +1,20 @@
 @import '_colorScheme';
-
-:root {
-    font-size: 8px;
+@import '_mixins';
+:root{
+    font-size: 16px;
 }
 
 * {
-    font-family: 'Roboto Flex', sans-serif;
-    font-size: 3rem; 
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem; 
     margin: 0;
     padding: 0;
+    border: 1px;
     box-sizing: border-box;
     border-radius: 4px;
-    scrollbar-width: thin;
 }
-
-hr {
-    margin-bottom: 1rem;
-    max-width: 64rem;
+header{
+    font-size: 2.25rem;
 }
 
 input{
@@ -25,14 +23,16 @@ input{
 }
 
 button{
-    border: 1px solid $Negro;
+    @include flex(center, center, unset);
     background-color: transparent;
-    height: 6rem;
-    padding: 1rem 2rem;
+    height: 3rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
 }
 
-
-
+hr {
+    width: 100%;
+    height: 2px;
+}
 
 
