--- a/LAMANSYS/FE/todo-list/src/app/feature/task-item/task-item.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task-item/task-item.component.html
@@ -1,10 +1,8 @@
 <article class="task-container">
-  <div class="check-and-task"> 
-    <input class="checkbox" type="checkbox" (click)="emitChangeOnCheckTask()">
-    <span class="text">
-      <ng-content></ng-content>
-    </span>
-  </div>
+  <input type="checkbox" (click)="emitChangeOnCheckTask()">
+  <div class="task-text">
+    <span><ng-content></ng-content></span>
+  </div> 
   <div class="btns">
     <app-btn-icon [type]="copy"></app-btn-icon>
     <app-btn-icon [type]="share"></app-btn-icon>
