--- a/LAMANSYS/FE/todo-list/src/app/feature/task-list/task-list.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task-list/task-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li class="task" *ngFor="let task of taskList">
+    <li class="task" *ngFor="let task of tasksService.getTaskList()">
         <app-task-item
         [task] = "task">
         {{task.title}}
