--- a/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/core/core-header/core-header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>LISTA DE TAREAS DE NINA</h1>
+    <h1>NINA'S TODO LIST</h1>
     <app-btn-icon class="btn" [type]="fullScreen"></app-btn-icon>
 </header>
 
