V5 - Add services for different buttons

--- a/LAMANSYS/FE/todo-list/src/app/feature/task-item/task-item.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task-item/task-item.component.html
@@ -4,8 +4,8 @@
     <span><ng-content></ng-content></span>
   </div> 
   <div class="btns">
-    <app-btn-icon [type]="copy"></app-btn-icon>
-    <app-btn-icon [type]="share"></app-btn-icon>
+    <app-btn-icon [type]="copy" (click)="copyTask()"></app-btn-icon>
+    <app-btn-icon [type]="share" (click)="shareTask()"></app-btn-icon>
     <app-btn-icon [type]="delete" (click)="deleteTask()"></app-btn-icon>
   </div>
 </article>
