V6 - Add routes, guards & views

--- a/LAMANSYS/FE/todo-list/src/app/app.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
-    <app-core-header></app-core-header>
-    <app-core-content></app-core-content>
+    <router-outlet></router-outlet>
+    <!-- <app-core-header></app-core-header>
+    <app-core-content></app-core-content> -->
 </div>
