--- a/LAMANSYS/FE/todo-list/src/app/feature/task-list/task-list.component.html
+++ b/LAMANSYS/FE/todo-list/src/app/feature/task-list/task-list.component.html
@@ -1,8 +1,9 @@
 <ul>
     <li class="task" *ngFor="let task of tasksService.getTaskList()">
-        <app-task-item
-        [task] = "task">
-        {{task.title}}
+        <app-task-item [task]="task">
+            <a routerLink="/tasks/{{task.id}}">
+                {{task.title}}
+            </a>
         </app-task-item>
     </li>
-</ul> 
+</ul>
