--- a/LAMANSYS/FE/todo-list/src/app/views/login/login.component.scss
+++ b/LAMANSYS/FE/todo-list/src/app/views/login/login.component.scss
@@ -17,6 +17,10 @@
         section{
             margin: 2rem;
             input{
+                flex: 1;
+                flex-basis: 100%;
+                white-space: nowrap;
+                overflow: hidden;
                 margin: 0.5rem;
                 border: gray 2px solid;
                 background-color: rgba(255, 255, 255, 0.1);
